// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Command > should extract version from class name _V2 suffix 1`] = `
{
  "dto": {
    "kind": "command",
    "name": "test_command_create",
    "version": 2,
  },
}
`;

exports[`Command > should stage dto metadata with custom name and version when provided as options 1`] = `
{
  "dto": {
    "kind": "command",
    "name": "my_command",
    "version": 3,
  },
}
`;

exports[`Command > should stage dto metadata with custom name when provided as string 1`] = `
{
  "dto": {
    "kind": "command",
    "name": "custom_command_name",
    "version": 1,
  },
}
`;

exports[`Command > should stage dto metadata with snake_case name derived from class name 1`] = `
{
  "dto": {
    "kind": "command",
    "name": "test_command_create",
    "version": 1,
  },
}
`;
